--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: #fffaf3;
-    color: #4b3d2a;
+    background-color: #4f4c47;
+    color: #937347;
 }
 
 header {
-    background-color: #6f4e37;
+    background-color: #c8926b;
     color: white;
     padding: 30px 20px;
     text-align: center;
@@ -17,7 +17,7 @@ section {
 }
 
 .sobre, .contato {
-    background-color: #f6f1e7;
+    background-color: #413f39;
     margin: 20px 0;
     border-radius: 8px;
     padding: 20px;
@@ -34,13 +34,13 @@ section {
     width: 250px;
     height: auto;
     border-radius: 10px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    box-shadow: 0 2px 6px rgba(18, 0, 0, 0.2);
 }
 
 footer {
     text-align: center;
     padding: 15px;
-    background-color: #6f4e37;
+    background-color: #b97c50;
     color: white;
 }
 
